--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -13,10 +13,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          ref: 'pizza-order-ui'
 
       - name: Fetch main branch
         run: |
-          git fetch origin main:main
+          git fetch origin main
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
