--- a/test.yaml
+++ b/test.yaml
@@ -12,3 +12,17 @@ on the networking part we don't provide peering with regions in a different geo 
 e networking part we don't provide peering with regions in a different geo region where the sub has been createde network config we should respect the networking standard
 on the access provisioning part on azure the pipeline  support creating only two groups "Contributurs" and "Cost-Readers"
 on the networking part we don't provide peering with regions in a different geo region where the sub has been created
+the pipeline don't support the peering with NPD hub environement
+we provide either /25 and above for vnet address mask
+in the network config we should respect the networking standard
+on the access provisioning part on azure the pipeline  support creating only two groups "Contributurs" and "Cost-Readers"
+on the networking part we don't provide peering with regions in a different geo region where the sub has been created
+
+e network config we should respect the networking standard
+on the access provisioning part on azure the pipeline  support creating only two groups "Contributurs" and "Cost-Readers"
+on the networking part we don't provide peering with regions in a different geo region where the sub has been createde network config we should respect the networking standard
+on the access provisioning part on azure the pipeline  support creating only two groups "Contributurs" and "Cost-Readers"
+on the networking part we don't provide peering with regions in a different geo region where the sub has been created
+e networking part we don't provide peering with regions in a different geo region where the sub has been createde network config we should respect the networking standard
+on the access provisioning part on azure the pipeline  support creating only two groups "Contributurs" and "Cost-Readers"
+on the networking part we don't provide peering with regions in a different geo region where the sub has been created
