--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -20,11 +20,12 @@ jobs:
           git fetch origin main
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
           base: pizza-order-ui
+          commit-message: update
           title: 'Merge pizza-order-ui into main'
           body: |
             This PR was automatically created to merge changes from the pizza-order-ui branch into main.
